WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177265
Spelling and grammar dots should not overlap
https://bugs.webkit.org/show_bug.cgi?id=177265
Summary
Spelling and grammar dots should not overlap
Daniel Bates
Reported
2017-09-20 13:49:50 PDT
Spelling and grammar error dots may overlap. But they should not. To see this issue you can perform the following steps in Safari. 1. Ensure that Check Spelling While Typing and Check Grammar with Spelling are enabled under Edit > Spelling and Grammar. 2. Visit <data:text/html,<div contenteditable="true"></div><script>document.querySelector("div").focus();document.execCommand("InsertText", false, "to mooof or not to mooof. ");document.querySelector("div").blur();</script>> Compare the visual appearance in Safari with the visual appearance of copying and pasting "to mooof or not to mooof. " in TextEdit.
Attachments
Patch and unit tests
(38.79 KB, patch)
2017-09-20 14:18 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
[Screenshot] Before patch
(2.66 KB, image/png)
2017-09-20 14:21 PDT
,
Daniel Bates
no flags
Details
[Screenshot] After patch
(2.75 KB, image/png)
2017-09-20 14:23 PDT
,
Daniel Bates
no flags
Details
[Screenshot] TextEdit
(3.17 KB, image/png)
2017-09-20 14:23 PDT
,
Daniel Bates
no flags
Details
Patch and unit tests
(42.13 KB, patch)
2017-09-20 14:25 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch and unit tests
(42.76 KB, patch)
2017-09-20 14:34 PDT
,
Daniel Bates
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-09-20 13:50:36 PDT
<
rdar://problem/34556424
>
Daniel Bates
Comment 2
2017-09-20 14:18:44 PDT
Created
attachment 321366
[details]
Patch and unit tests The implementation of subdivide() is derived from an algorithm that Said Abou-Hallawa came up with. I added unit tests to avoid creating platform-specific pixel tests (we do not run pixel tests by default).
Build Bot
Comment 3
2017-09-20 14:20:33 PDT
Comment hidden (obsolete)
Attachment 321366
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/Subrange.cpp:29: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 4
2017-09-20 14:21:52 PDT
Created
attachment 321368
[details]
[Screenshot] Before patch The screenshot reflects the behavior in shipping Safari as of the time of writing (dots are painted upside down; corrected in
bug #176949
).
Daniel Bates
Comment 5
2017-09-20 14:23:25 PDT
Created
attachment 321369
[details]
[Screenshot] After patch The screenshot reflects a WebKit build that includes the fix for
bug #176949
.
Daniel Bates
Comment 6
2017-09-20 14:23:58 PDT
Created
attachment 321370
[details]
[Screenshot] TextEdit
Daniel Bates
Comment 7
2017-09-20 14:25:27 PDT
Created
attachment 321371
[details]
Patch and unit tests
Build Bot
Comment 8
2017-09-20 14:28:25 PDT
Comment hidden (obsolete)
Attachment 321371
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/Subrange.cpp:29: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 9
2017-09-20 14:34:11 PDT
Created
attachment 321373
[details]
Patch and unit tests
Build Bot
Comment 10
2017-09-20 14:36:44 PDT
Attachment 321373
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/Subrange.cpp:29: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 11
2017-09-20 14:48:10 PDT
Comment on
attachment 321373
[details]
Patch and unit tests View in context:
https://bugs.webkit.org/attachment.cgi?id=321373&action=review
> Source/WebCore/rendering/Subrange.h:34 > +struct Subrange {
I think this name of this class and the file need a little more qualification. Maybe MarkerSubrange?
Dave Hyatt
Comment 12
2017-09-20 14:50:38 PDT
Comment on
attachment 321373
[details]
Patch and unit tests I think TextSubrange may be a little less generic, and lets people know we're talking about text ranges.
Daniel Bates
Comment 13
2017-09-20 14:55:07 PDT
(In reply to Simon Fraser (smfr) from
comment #11
)
> Comment on
attachment 321373
[details]
> Patch and unit tests > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=321373&action=review
> > > Source/WebCore/rendering/Subrange.h:34 > > +struct Subrange { > > I think this name of this class and the file need a little more > qualification. Maybe MarkerSubrange?
(In reply to Dave Hyatt from
comment #12
)
> Comment on
attachment 321373
[details]
> Patch and unit tests > > I think TextSubrange may be a little less generic, and lets people know > we're talking about text ranges.
After talking with Dave, I'll take Simon's suggestion and rename the class from Subrange to MarkerSubrange before landing.
Daniel Bates
Comment 14
2017-09-20 16:13:36 PDT
Committed
r222298
: <
http://trac.webkit.org/changeset/222298
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug